# IntegrAO

./: .readthedocs.yaml  README.md  extract_feature_importance.py  infer_feature_importance.py  pyproject.toml  requirement.txt
data/omics/: clusters.txt  omics1.txt  omics2.txt  omics3.txt
docs/: requirements-docs.txt
docs/source/: conf.py  index.rst  installation.rst  integrao.rst  references.rst  tutorial_butterfly.nblink  tutorial_cancer.nblink  tutorial_classify.nblink
integrao/: IntegrAO_supervised.py  IntegrAO_unsupervised.py  dataset.py  integrater.py  main.py  supervised_train.py  unsupervised_train.py  util.py
tutorials/: cancer_omics_classification.ipynb  simulated_butterfly.ipynb  simulated_cancer_omics.ipynb  supervised_integration_feature_importance.ipynb  unsupervised_integration_feature_importance.ipynb
